# Image-enhancement-software

./: Project 1.sln  README.md
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
IntensityProfile/: CMakeLists.txt
IntensityProfile/LineIntensityProfile/: CMakeLists.txt  LineIntensityProfile.py
Project1/: ControllerModel.cpp  ControllerModel.h  FilterModel.cpp  FilterModel.h  Lib.cpp  Lib.h  Main.cpp  MainForm.cpp  MainForm.h  MainForm.resx  MetaDataForm.cpp  MetaDataForm.h  Project1.vcxproj  Project1.vcxproj.filters
